--- a/palindrome-checker/index.html
+++ b/palindrome-checker/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <h1>Palindrome Checker</h1>
     <input id="text-input">
     <button id="check-btn"></button>
 
