feat: Implemented Roman Numeral conversion logic

--- a/roman-numeral-converter/index.html
+++ b/roman-numeral-converter/index.html
@@ -6,8 +6,10 @@
     <title>Roman Numeral Converter</title>
 </head>
 <body>
-    <input id="number">
-    <button id="convert-btn"></button>
+    <h1>Roman Numeral Converter</h1>
+    <input type="text" id="number">
+    <button id="convert-btn">Convert</button>
     <div id="output"></div>
+    <script src="./script.js"></script>
 </body>
 </html>
