--- a/telephone-number-validator/index.html
+++ b/telephone-number-validator/index.html
@@ -7,9 +7,10 @@
     <title>Telephone Number Validator</title>
 </head>
 <body>
+    <h1>US/CA Phone Number Validator</h1>
     <input type="text" id="user-input">
-    <button id="check-btn"></button>
-    <button id="clear-btn"></button>
+    <button id="check-btn">Check</button>
+    <button id="clear-btn">Clear</button>
 
     <div id="results-div"></div>
     <script src="./script.js"></script>
